--- a/index.html
+++ b/index.html
@@ -44,7 +44,32 @@
       if (e.keyCode == 74) //j
         onAirMessage(3, {right : {pressed: keydown}});
   }
-  
+  addEventListener("touchstart", touchHandler);
+  addEventListener("touchend", touchHandler);
+  addEventListener("mousedown", touchHandler);
+  addEventListener("mouseup", touchHandler);
+  function touchHandler(e) {
+    console.log(e);
+    if (e.touches || e.type == "mousedown") {
+      var x;
+      if (e.type == "mousedown") {
+        console.log(e.pageX);
+         x = e.pageX;
+         console.log(x);
+      }
+      else {
+         x = e.touches[0].pageX;
+      }
+      console.log(x);
+      if (x < window.innerWidth * 0.4)
+        onAirMessage(2, {left : {pressed: true}, right : {pressed: false}});
+        if (x > window.innerWidth * 0.6)
+        onAirMessage(2, {right : {pressed: true}, left : {pressed: false}});
+    } else {
+      console.log("mouseup");
+     onAirMessage(2, {left : {pressed: false}, right : {pressed: false}});
+    }
+  }
   //creating 3 players
 var plr;
 plr = addplayer("Enemy", 1, true);
